# MathPhys

./: .gitignore  MathPhys.cbp  MathPhys.sln  MathPhys.vcxproj  MathPhys.vcxproj.filters  Particle.cpp  Particle.h  RegistreForces.cpp  Vecteur3D.cpp  Vecteur3D.h  main.cpp  resource.h
Cmake/: CMakeLists.txt  README.md
Cmake/main/myexe/: CMakeLists.txt
Cmake/main/myexe/include/: BVH.h  CollisionData.h  Contact.h  Cube.h  DragForce.h  GameWorld.h  GravityForce.h  Matrix3.h  Matrix4.h  Particle.h  ParticleAnchoredSpring.h  ParticleBungeeElastic.h  ParticleBuoyancy.h  ParticleCable.h  ParticleContact.h  ParticleContactGenerator.h  ParticleContactResolver.h  ParticleForceGenerator.h  ParticleLink.h  ParticleRod.h  ParticleSpring.h  ParticleStiffSpring.h  Plane.h  Primitive.h  Quaternion.h  RegistreContacts.h  RegistreForces.h  RigidBody.h  Vector3D.h
Cmake/main/myexe/src/: BVH.cpp  CollisionData.cpp  Cube.cpp  DragForce.cpp  GameWorld.cpp  GravityForce.cpp  Matrix3.cpp  Matrix4.cpp  Particle.cpp  ParticleAnchoredSpring.cpp  ParticleBungeeElastic.cpp  ParticleBuoyancy.cpp  ParticleCable.cpp  ParticleContact.cpp  ParticleContactResolver.cpp  ParticleForceGenerator.cpp  ParticleLink.cpp  ParticleRod.cpp  ParticleSpring.cpp  ParticleStiffSpring.cpp  Plane.cpp  Primitive.cpp  Quaternion.cpp  RegistreContacts.cpp  RegistreForces.cpp  RigidBody.cpp  Vector3D.cpp  main.cpp
Cmake/test/: CMakeLists.txt
Cmake/test/model_viewer/: CMakeLists.txt
Debug/: MathPhys.ilk
MathPhys/: Balle.cpp  Balle.h  BouleDeFeu.cpp  BouleDeFeu.h  Boulet.cpp  Boulet.h  DragForce.cpp  DragForce.h  GameWorld.cpp  GameWorld.h  GravityForce.cpp  GravityForce.h  Laser.cpp  Laser.h  MathPhys.vcxproj  MathPhys.vcxproj.filters  Particle.cpp  Particle.h  ParticleAnchoredSpring.cpp  ParticleAnchoredSpring.h  ParticleBungeeElastic.cpp  ParticleBungeeElastic.h  ParticleBuoyancy.cpp  ParticleBuoyancy.h  ParticleContact.cpp  ParticleContact.h  ParticleContactGenerator.h  ParticleLink.cpp  ParticleSpring.cpp  ParticleSpring.h  ParticleStiffSpring.cpp  ParticleStiffSpring.h  Particule.cpp  Particule.h  ParticuleForceGenerator.cpp  ParticuleForceGenerator.h  RegistreForces.cpp  RegistreForces.h  RigidBody.h  Veccteur3D.cpp  (+6 more)
MathPhys/x64/Debug/: vc142.idb
MathPhys/x64/Debug/MathPhys.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MathPhys.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: Particule.h  Vecteur3D.h
src/: Particule.cpp  Vecteur3D.cpp
x64/Debug/: MathPhys.ilk
